--- a/views/addTicket.ejs
+++ b/views/addTicket.ejs
@@ -5,33 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add New Ticket</title>
+    <link rel="stylesheet" href="/css/ticket.css">
 </head>
 
 <body>
-    <h1>Add New Ticket</h1>
+
     <form action="/add" method="POST">
-        <label for="id_ve">Ticket ID:</label>
+        <h2>Thông tin vé</h2>
+        <label for="id_ve">ID Vé:</label>
         <input type="text" id="id_ve" name="id_ve"><br>
 
-        <label for="id_chuyen_tau">Train ID:</label>
-        <input type="text" id="id_chuyen_tau" name="id_chuyen_tau"><br>
+        <label for="id_chuyen_tau">Chuyến Tàu:</label>
+        <select id="id_chuyen_tau" name="id_chuyen_tau">
+            <% chuyentau.forEach(chuyentauItem=> { %>
+                <option value="<%= chuyentauItem.id_chuyen_tau %>">
+                    <%= chuyentauItem.id_chuyen_tau %> - <%= chuyentauItem.ga_tau.join(' - ') %>
+                </option>
+            <% }); %>
+        </select>
+        
 
-        <label for="id_nhan_vien">Employee ID:</label>
-        <input type="text" id="id_nhan_vien" name="id_nhan_vien"><br>
+        <label for="id_nhan_vien">Nhân viên:</label>
+        <select id="id_nhan_vien" name="id_nhan_vien">
+            <% nhanvien.forEach(nhanvienItem=> { %>
+                <option value="<%= nhanvienItem.id_nhan_vien %>">
+                    <%= nhanvienItem.ten_nhan_vien %>
+                </option>
+                <% }); %>
+        </select>
 
-        <label for="id_khach_hang">Customer ID:</label>
-        <input type="text" id="id_khach_hang" name="id_khach_hang"><br>
+        <label for="gia_ve">Giá vé:</label>
+        <input type="number" id="gia_ve" name="gia_ve"><br>
 
-        <label for="id_tru_so">Headquarters ID:</label>
-        <input type="text" id="id_tru_so" name="id_tru_so"><br>
-
-        <label for="gia_ve">Ticket Price:</label>
-        <input type="text" id="gia_ve" name="gia_ve"><br>
-
-        <label for="id_ghe">Seat ID:</label>
+        <label for="id_ghe">ID Ghế:</label>
         <input type="text" id="id_ghe" name="id_ghe"><br>
 
-        <input type="submit" value="Add Ticket">
+        <!-- <label for="id_tru_so">ID Trụ sở:</label> -->
+        <input type="hidden" id="id_tru_so" name="id_tru_so" value="<%= idtruso %> "><br>
+
+        <h2>Thông tin khách hàng</h2>
+
+        <label for="cccd">CCCD</label>
+        <input type="text" id="cccd" name="cccd"><br>
+
+        <label for="ten_khach_hang">Tên khách hàng</label>
+        <input type="text" id="ten_khach_hang" name="ten_khach_hang"><br>
+
+        <label for="sdt">Số điện thoại</label>
+        <input type="text" id="sdt" name="sdt"><br>
+
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email"><br>
+
+        <input type="submit" value="Thêm vé">
     </form>
 </body>
 
