--- a/views/addTicket.ejs
+++ b/views/addTicket.ejs
@@ -15,7 +15,7 @@
         <label for="id_ve">ID Vé:</label>
         <input type="text" id="id_ve" name="id_ve"><br>
 
-        <label for="id_chuyen_tau">Chuyến Tàu:</label>
+        <label for="id_chuyen_tau">Chuyến tàu:</label>
         <select id="id_chuyen_tau" name="id_chuyen_tau">
             <% chuyentau.forEach(chuyentauItem=> { %>
                 <option value="<%= chuyentauItem.id_chuyen_tau %>">
