--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,10 @@
 </head>
 
 <body>
+
     <h1>Danh sách trụ sở</h1>
     <table>
+
         <thead>
             <tr>
                 <th>STT</th>
@@ -29,8 +31,12 @@
                     </td>
                 </tr>
                 <% }); %>
+
         </tbody>
+
     </table>
+    <h4><a href="/client">Tất cả khách hàng trong database</a></h4>
+
 </body>
 
 </html>
