--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,6 +13,13 @@ h1 {
     margin-top: 20px;
 }
 
+h4 {
+    text-align: center;
+    color: #333333;
+    margin-top: 20px;
+
+}
+
 table {
     width: 80%;
     margin: 20px auto;
@@ -47,9 +54,11 @@ th {
 }
 
 a {
+    text-align: center;
     text-decoration: none;
     color: #4CAF50;
     font-weight: bold;
+
 }
 
 a:hover {
